@@ -144,6 +144,7 @@ Bug Fixes:
 - PR#5543: in Bigarray.map_file, try to avoid using lseek() when growing file
 - PR#5538: combining -i and -annot in ocamlc
 - PR#5560: incompatible type for tuple pattern with -principal
+- PR#5603: wrong .file debug info generated by ocamlopt -g
 - PR#5610: new unmarshaler (from PR#5318) fails to freshen object identifiers
 - problem with printing of string literals in camlp4 (reported on caml-list)
 - emacs mode: colorization of comments and strings now works correctly
